--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,6 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <!-- import dependencies management from mapapps -->
                 <groupId>de.conterra.mapapps</groupId>
                 <artifactId>ct-mapapps</artifactId>
                 <version>${mapapps.version}</version>
@@ -55,8 +54,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.conterra.mapapps</groupId>
-            <artifactId>ct-mapapps-proxy</artifactId>
+            <groupId>de.conterra.ct-proxy</groupId>
+            <artifactId>ct-proxy-servlet</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- include for vue-devtools support -->
@@ -66,7 +65,6 @@
             <classifier>dev</classifier>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.vuetifyjs</groupId>
             <artifactId>vuetify</artifactId>
@@ -103,6 +101,10 @@
                     <version>${ct.jsregistry.version}</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.1.0</version>
@@ -113,12 +115,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.2.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.1.1</version>
+                    <version>3.2.0</version>
                     <configuration>
                         <classesDirectory>${js.build.outputPath}</classesDirectory>
                         <includes>
@@ -132,7 +134,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.2</version>
+                    <version>3.2.3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -162,25 +164,20 @@
                 <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
-                    <version>1.6</version>
+                    <version>1.10.0</version>
                     <configuration>
-                        <nodeVersion>v12.13.0</nodeVersion>
-                        <npmVersion>6.12.0</npmVersion>
+                        <nodeVersion>v14.15.1</nodeVersion>
+                        <npmVersion>6.14.9</npmVersion>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.3</version>
-                </plugin>
-                <plugin>
-                    <groupId>de.jutzig</groupId>
-                    <artifactId>github-release-plugin</artifactId>
-                    <version>1.1.1</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
@@ -203,7 +200,12 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-scm-plugin</artifactId>
-                    <version>1.9.5</version>
+                    <version>1.10.0</version>
+                    <configuration>
+                        <tag>${project.version}</tag>
+                        <username>${scm.username}</username>
+                        <password>${scm.password}</password>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -240,7 +242,7 @@
             <plugin>
                 <groupId>de.conterra.maven</groupId>
                 <artifactId>setproperties-maven-plugin</artifactId>
-                <version>1.0.2</version>
+                <version>1.0.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -404,6 +406,10 @@
                         <include>src/main/js/**/*.ts</include>
                         <include>src/main/js/**/*.vue</include>
                         <include>src/main/js/**/*.css</include>
+                        <include>src/test/**/*.js</include>
+                        <include>src/test/**/*.html</include>
+                        <include>src/test/**/*.css</include>
+                        <include>src/test/**/application.properties</include>
                         <include>src/main/config/assembly.xml</include>
                         <include>**/build.properties</include>
                         <include>**/gulpfile.js</include>
@@ -443,7 +449,7 @@
                                     <!-- remove bundleLocations from app.json -->
                                     <token>\s*"bundleLocations"\s*:\s*\[\s*"localbundles"\s*,\s*"bundles"\s*\]\s*,\s*
                                     </token>
-                                    <value />
+                                    <value/>
                                 </replacement>
                             </replacements>
                         </configuration>
@@ -454,6 +460,13 @@
                 <groupId>de.conterra.mapapps</groupId>
                 <artifactId>mapapps-maven-plugin</artifactId>
                 <executions>
+                    <execution>
+                        <!-- used to create .zip files containing the apps during the build -->
+                        <id>create-app-zips</id>
+                        <goals>
+                            <goal>deployApps</goal>
+                        </goals>
+                    </execution>
                     <execution>
                         <id>build-app-template</id>
                         <phase>prepare-package</phase>
@@ -474,8 +487,11 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <!-- only build zip files -->
                     <skipDeploy>true</skipDeploy>
                     <createApp>false</createApp>
+                    <sourceDirectory>${js.build.outputPath}/apps</sourceDirectory>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -502,12 +518,8 @@
                 <configuration>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                     <preparationGoals>clean</preparationGoals>
-                    <releaseProfiles>compress,github-release</releaseProfiles>
+                    <releaseProfiles>compress</releaseProfiles>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <!-- for git release plugin-->
-                    <arguments>-Dusername=${scm.username} -Dpassword=${scm.password}</arguments>
-                    <username>${scm.username}</username>
-                    <password>${scm.password}</password>
                 </configuration>
             </plugin>
         </plugins>
@@ -521,14 +533,12 @@
     </scm>
     <distributionManagement>
         <repository>
-            <id>ct-dist-releases-file</id>
-            <name>repository for sdi.suite releases</name>
-            <url>${release.deployment.url}</url>
+            <id>${dist.releases.id}</id>
+            <url>${dist.releases.url}</url>
         </repository>
         <snapshotRepository>
-            <id>ct-dist-snapshots-file</id>
-            <name>repository for sdi.suite snapshots</name>
-            <url>${snapshot.deployment.url}</url>
+            <id>${dist.snapshots.id}</id>
+            <url>${dist.snapshots.url}</url>
         </snapshotRepository>
     </distributionManagement>
     <properties>
@@ -537,12 +547,12 @@
         <root.build.outputPath>${project.build.directory}/webapp</root.build.outputPath>
         <js.build.outputPath>${root.build.outputPath}/js</js.build.outputPath>
 
-        <mapapps.version>4.8.3</mapapps.version>
+        <mapapps.version>4.12.0</mapapps.version>
         <!-- JS lib versions -->
         <apprt.version>${mapapps.version}</apprt.version>
         <!-- java lib versions -->
-        <ct.jsregistry.version>1.3.6</ct.jsregistry.version>
-        <ct.jsrt-test.version>1.1.5</ct.jsrt-test.version>
+        <ct.jsregistry.version>1.4.3</ct.jsregistry.version>
+        <ct.jsrt-test.version>2.0.2</ct.jsrt-test.version>
 
         <!-- the default app, replaced in the *.html files to switch app names-->
         <default.app.name>sample</default.app.name>
@@ -552,15 +562,24 @@
             *://*:*/**;
         </proxy.allowedServerUrls>
         <proxy.allowedSSLDNs>*</proxy.allowedSSLDNs>
-        <proxy.use.rules />
+        <proxy.use.rules></proxy.use.rules>
         <jetty.port>9090</jetty.port>
         <mvn.cmd>mvn</mvn.cmd>
-        <gulp.task />
+        <gulp.task></gulp.task>
+
+        <mapapps.user><!-- set correct username for map.apps remote installation--></mapapps.user>
+        <mapapps.pw><!-- set correct password for map.apps remote installation--></mapapps.pw>
+        <!-- set to false if map.apps is configured behind integrated windows authentication is required -->
+        <mapapps.useChunkedRequestEncoding>true</mapapps.useChunkedRequestEncoding>
+        <!-- enable this if "upload" profile should only deploy bundles -->
+        <skip.apps.upload>false</skip.apps.upload>
+        <!-- enable this if "upload" profile should pre-optimize apps -->
+        <triggerPreOptimization>false</triggerPreOptimization>
 
         <!-- required for release build -->
         <scm.push>false</scm.push>
-        <scm.username>${env.USER_NAME}</scm.username>
-        <scm.password>${env.USER_PW}</scm.password>
+        <scm.username>${env.GITHUB_USER_NAME}</scm.username>
+        <scm.password>${env.GITHUB_USER_PW}</scm.password>
     </properties>
     <profiles>
         <profile>
@@ -576,7 +595,7 @@
                                 <goals>
                                     <goal>reserve-network-port</goal>
                                 </goals>
-                                <phase>process-test-classes</phase>
+                                <phase>process-test-resources</phase>
                                 <configuration>
                                     <portNames>
                                         <portName>jetty.server.port</portName>
@@ -623,9 +642,7 @@
                                     <goal>gulp</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>run-browser-tests --tests
-                                        http://localhost:${jetty.server.port}/js/tests/runTests.html
-                                    </arguments>
+                                    <arguments>run-browser-tests --tests http://localhost:${jetty.server.port}/resources/jsregistry/root/@conterra/mapapps-mocha-runner/latest/mocha.html?boot=/js/tests/test-init.js&amp;timeout=5000&amp;test=dn_editingreshapeinterceptor/tests/all&amp;reporter=tap</arguments>
                                 </configuration>
                             </execution>
                         </executions>
@@ -774,45 +791,8 @@
                                     <async>true</async>
                                     <executable>${maven.home}/bin/${mvn.cmd}</executable>
                                     <arguments>
-                                        <argument>com.github.eirslett:frontend-maven-plugin:gulp@watch-changes
-                                        </argument>
+                                        <argument>com.github.eirslett:frontend-maven-plugin:gulp@watch-changes</argument>
                                     </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>github-release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>de.jutzig</groupId>
-                        <artifactId>github-release-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>github-upload</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>release</goal>
-                                </goals>
-                                <configuration>
-                                    <tag>${project.version}</tag>
-                                    <artifact>${project.build.directory}/${project.artifactId}-${project.version}.jar
-                                    </artifact>
-                                    <fileSets>
-                                        <fileSet>
-                                            <directory>${project.build.directory}</directory>
-                                            <includes>
-                                                <include>${project.artifactId}-bundle.zip</include>
-                                                <include>${project.artifactId}-sample-app.zip</include>
-                                                <!--<include>${project.artifactId}*.tar.gz</include>-->
-                                                <include>${project.artifactId}*.zip</include>
-                                            </includes>
-                                        </fileSet>
-                                    </fileSets>
                                 </configuration>
                             </execution>
                         </executions>
@@ -868,36 +848,18 @@
             </build>
         </profile>
         <profile>
-            <id>commit-release-versions</id>
+            <id>compress</id>
+            <properties>
+                <gulp.task>compress</gulp.task>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
-                        <artifactId>maven-scm-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>checkin</goal>
-                                </goals>
-                                <configuration>
-                                    <message>[update-bundle-package-versions] from ${replace.source.version} to
-                                        ${replace.target.version}
-                                    </message>
-                                    <basedir>${basedir}/src/main/js</basedir>
-                                    <pushChanges>${scm.push}</pushChanges>
-                                    <username>${scm.username}</username>
-                                    <password>${scm.password}</password>
-                                </configuration>
-                            </execution>
-                        </executions>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <updateReleaseInfo>true</updateReleaseInfo>
+                        </configuration>
                     </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>compress</id>
-            <build>
-                <plugins>
                     <plugin>
                         <groupId>de.conterra.jsregistry</groupId>
                         <artifactId>ct-jsregistry-maven-plugin</artifactId>
@@ -925,23 +887,6 @@
                                     </jsFiles>
                                 </configuration>
                             </execution>
-                            <execution>
-                                <id>optimize CSS</id>
-                                <goals>
-                                    <goal>optimizeCSS</goal>
-                                </goals>
-                                <phase>compile</phase>
-                                <configuration>
-                                    <cssFiles>
-                                        <includes>
-                                            <include>bundles/*/*/*.css</include>
-                                        </includes>
-                                        <excludes>
-                                            <exclude>**/themeSettings.css</exclude>
-                                        </excludes>
-                                    </cssFiles>
-                                </configuration>
-                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
@@ -955,15 +900,16 @@
                         <groupId>de.conterra.mapapps</groupId>
                         <artifactId>mapapps-maven-plugin</artifactId>
                         <configuration>
-                            <!-- enable deploy options -->
-                            <skipDeploy>false</skipDeploy>
+                            <skipDeploy>${skip.apps.upload}</skipDeploy>
                             <deployAsApp>true</deployAsApp>
                             <appName>${project.artifactId}</appName>
                             <appTitle>${project.artifactId}-${project.version}</appTitle>
                             <appEditorState>PUBLISHED</appEditorState>
                             <serverResourcesEndpoint>${mapapps.remote.base}/resources</serverResourcesEndpoint>
-                            <username>admin</username>
-                            <password>admin</password>
+                            <username>${mapapps.user}</username>
+                            <password>${mapapps.pw}</password>
+                            <useChunkedRequestEncoding>${mapapps.useChunkedRequestEncoding}</useChunkedRequestEncoding>
+                            <triggerPreOptimization>${triggerPreOptimization}</triggerPreOptimization>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -977,8 +923,9 @@
                                 </goals>
                                 <configuration>
                                     <registryEndpoint>${mapapps.remote.base}/resources/jsregistry</registryEndpoint>
-                                    <username>admin</username>
-                                    <password>admin</password>
+                                    <username>${mapapps.user}</username>
+                                    <password>${mapapps.pw}</password>
+                                    <useChunkedRequestEncoding>${mapapps.useChunkedRequestEncoding}</useChunkedRequestEncoding>
                                 </configuration>
                             </execution>
                         </executions>
