--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,20 +2,47 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run Jetty Server",
+            "label": "Initialize",
+            "detail": "Initialize map.apps for Developers project",
             "type": "shell",
-            "command": "mvn clean jetty:run -P watch-all",
-            "group": {
-                "kind": "build"
+            "command": "mvn initialize",
+            "group": "build"
+        },
+        {
+            "label": "Run",
+            "detail": "Run map.apps for Developers development server",
+            "type": "shell",
+            "command": "mvn",
+            "args": ["clean", "compile", "-Denv=dev", "'-Dlocal.configfile=./build.properties'", "-Pinclude-mapapps-deps"],
+            "group": "build",
+            "isBackground": true
+        },
+        {
+            "label": "Run (Remote project mode)",
+            "detail": "Run map.apps for Developers development server in 'remote project' mode",
+            "type": "shell",
+            "command": "mvn",
+            "args": ["clean", "compile", "-Denv=dev", "'-Dlocal.configfile=./build.properties'"],
+            "group": "build",
+            "isBackground": true
+        },
+        {
+            "label": "Compress",
+            "detail": "Prepare bundles and apps for deployment on a map.apps instance",
+            "type": "shell",
+            "command": "mvn",
+            "args": ["clean", "install", "-Pcompress"],
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
             }
         },
         {
-            "label": "Install",
+            "label": "Clean",
             "type": "shell",
-            "command": "mvn clean install -P compress",
-            "group": {
-                "kind": "build"
-            }
+            "command": "mvn clean",
+            "group": "build"
         }
     ]
 }
