--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,8 @@
                             <goal>deployAppTemplate</goal>
                         </goals>
                         <configuration>
-                            <templateFile>${project.build.directory}/${project.artifactId}-sample-app.zip</templateFile>
+                            <templateFile>
+                                ${project.build.directory}/${project.artifactId}-sample-app.zip</templateFile>
                             <templateResources>
                                 <templateResource>
                                     <directory>${js.build.outputPath}/apps/sample</directory>
@@ -542,6 +543,12 @@
                     <artifactId>ct-mapapps-js-bom-dev</artifactId>
                     <version>${mapapps.version}</version>
                     <type>pom</type>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>de.conterra.devnet</groupId>
+                    <artifactId>mapapps-imprint-privacy</artifactId>
+                    <version>1.0.3</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
