--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.conterra.devnet</groupId>
     <artifactId>mapapps-editing-reshape-interceptor</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
     <dependencyManagement>
         <dependencies>
