--- a/src/main/js/bundles/dn_editingreshapeinterceptor/manifest.json
+++ b/src/main/js/bundles/dn_editingreshapeinterceptor/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "dn_editingreshapeinterceptor",
-    "version": "1.0.6-SNAPSHOT",
+    "version": "1.1.0",
     "title": "${bundleName}",
     "description": "${bundleDescription}",
     "vendor": "con terra GmbH",
